# InsightSmith

./: .env.local  .gitignore  README.md  data_exporter.py  pyproject.toml  run_build.py  run_chat.py  run_code_summary.py  run_process_twitter_events.py
data/files/: README.txt  insight-genie-product-definition.txt  linkedin-profile.txt  persona.txt
data/files/books/: audible.txt  books.json  books.txt  prompt_for_json.txt
data/files/code/: ai-assistant-manager.txt  ai-code-summary.txt  insight-genie.txt
data/twitter/: tweets.json
data/twitter/event_summaries/: Event Summary - The Agile Samurai - How Agile Masters Deliver Great Software.txt
data/twitter/events/authors/: The Agile Samurai - How Agile Masters Deliver Great Software-R2VvcmdlTXVycGh5MzMsIGpyYXNtdXNzb24sIGxlYW5kb2c.txt
data/twitter/events/groups/: The Agile Samurai - How Agile Masters Deliver Great Software.json
data/twitter/events/images/: The Agile Samurai - How Agile Masters Deliver Great Software-aHR0cHM6Ly9wYnMudHdpbWcuY29tL21lZGlhL0VEbFpKLXVXd0FFSUFDbC5wbmc.txt  The Agile Samurai - How Agile Masters Deliver Great Software-aHR0cHM6Ly9wYnMudHdpbWcuY29tL21lZGlhL0VEbFpKUTJYWUFBNXlqLS5qcGc.txt  The Agile Samurai - How Agile Masters Deliver Great Software-aHR0cHM6Ly9wYnMudHdpbWcuY29tL21lZGlhL0VEbFpKdkdYc0FBODFyNS5qcGc.txt  (+2 more)
insight_genie/exporters/books/: books_exporter.py  books_exporter_test.py
insight_genie/exporters/twitter/extraction/: event_groups.py  events.py  extractor.py  extractor_test.py  terms.py  (+3 more)
insight_genie/prompts/: prompt.md  prompt.py  prompt_test.py
prompts/: prompt.md
(+10 files in other folders)
